--- a/extension/public/cancel.html
+++ b/extension/public/cancel.html
@@ -14,19 +14,21 @@ chrome-extension://mpogjlmfglgmddglidjmhkdgcdaplicd/cancel.html
     <title>Payment Cancelled</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui, -apple-system, sans-serif;
             text-align: center;
             padding: 50px;
-            background-color: #fef2f2;
+            background-color: #111113;
+            color: #fafafa;
         }
 
         .container {
             max-width: 400px;
             margin: 0 auto;
             padding: 30px;
-            background: white;
+            background: #18181b;
+            border: 1px solid #3f3f46;
             border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 16px 40px rgba(0, 0, 0, 0.35);
         }
 
         .cancel-icon {
@@ -36,19 +38,19 @@ chrome-extension://mpogjlmfglgmddglidjmhkdgcdaplicd/cancel.html
         }
 
         h1 {
-            color: #991b1b;
+            color: #f4f4f5;
             margin-bottom: 10px;
         }
 
         p {
-            color: #374151;
+            color: #a1a1aa;
             margin-bottom: 20px;
         }
 
         button {
-            background-color: #6b7280;
-            color: white;
-            border: none;
+            background-color: rgba(251, 146, 60, 0.1);
+            color: #fdba74;
+            border: 1px solid rgba(251, 146, 60, 0.55);
             padding: 12px 24px;
             border-radius: 6px;
             cursor: pointer;
@@ -56,7 +58,7 @@ chrome-extension://mpogjlmfglgmddglidjmhkdgcdaplicd/cancel.html
         }
 
         button:hover {
-            background-color: #4b5563;
+            background-color: rgba(251, 146, 60, 0.16);
         }
     </style>
 </head>
