--- a/extension/public/success.html
+++ b/extension/public/success.html
@@ -14,19 +14,21 @@ chrome-extension://mpogjlmfglgmddglidjmhkdgcdaplicd/success.html
     <title>Payment Successful</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui, -apple-system, sans-serif;
             text-align: center;
             padding: 50px;
-            background-color: #f0f9ff;
+            background-color: #111113;
+            color: #fafafa;
         }
 
         .container {
             max-width: 400px;
             margin: 0 auto;
             padding: 30px;
-            background: white;
+            background: #18181b;
+            border: 1px solid #3f3f46;
             border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 16px 40px rgba(0, 0, 0, 0.35);
         }
 
         .success-icon {
@@ -36,19 +38,19 @@ chrome-extension://mpogjlmfglgmddglidjmhkdgcdaplicd/success.html
         }
 
         h1 {
-            color: #065f46;
+            color: #f4f4f5;
             margin-bottom: 10px;
         }
 
         p {
-            color: #374151;
+            color: #a1a1aa;
             margin-bottom: 20px;
         }
 
         button {
-            background-color: #10b981;
-            color: white;
-            border: none;
+            background-color: rgba(16, 185, 129, 0.1);
+            color: #a7f3d0;
+            border: 1px solid rgba(16, 185, 129, 0.55);
             padding: 12px 24px;
             border-radius: 6px;
             cursor: pointer;
@@ -56,7 +58,7 @@ chrome-extension://mpogjlmfglgmddglidjmhkdgcdaplicd/success.html
         }
 
         button:hover {
-            background-color: #059669;
+            background-color: rgba(16, 185, 129, 0.16);
         }
     </style>
 </head>
